Improve eval viewer display and add check metadata
Eval configs and viewer needed better labeling and data visibility.

YAML configs:
- Add top-level `name` and `description` fields (structured, not just comments)
- Add `metadata` (name/description) to each check definition

Backend:
- Change `create_checks_from_config` to return `Check` dataclass instead of `BaseCheck` so metadata is preserved through the engine
- Add `eval_name`, `eval_description`, `temperature` to `@evaluate` metadata in all 4 test files

Viewer:
- Fix bug: `tool_prediction` → `tool_predictions` (section never rendered before)
- Display `eval_name` instead of test function name in runs list and detail
- Show `eval_description` and `temperature` in run detail
- Add collapsible "Test Case" section showing input/expected values
- Use check `metadata.name` as primary label instead of `check_type`; show `check_type` as secondary chip with pass/fail badge
- Add brief descriptions to collapsible sections (Tool Predictions, Final Content, LLM Prompt)
- Remove AnnotationField from RunDetail

--- a/evals/content_mcp/config_edit_content.yaml
+++ b/evals/content_mcp/config_edit_content.yaml
@@ -1,16 +1,14 @@
-# Content MCP Server Evaluation Configuration
-# Tests the edit_content tool's ability to make precise text replacements
-#
+name: "edit_content: Surgical Text Fixes"
+description: |
+  Tests the edit_content tool for precise old_str/new_str text replacements.
+  Given a note with a typo and the full item + search results, the LLM should
+  choose edit_content (not update_item) to make a surgical fix.
+
 # TOOL CONTEXT:
 # edit_content: Replaces exact text in the content field via old_str/new_str substitution.
 #   old_str must match exactly one location. Only edits the content body (not title/description/tags).
 # update_item: Updates metadata and/or fully replaces content. Used for metadata changes or
 #   complete rewrites.
-#
-# WHAT THIS EVAL TESTS:
-# Given a note with a typo and the full item + search results, the LLM should use edit_content
-# (not update_item) to make a surgical fix. The eval provides get_item and search_in_content
-# results so the LLM has full context before deciding which tool to use.
 
 model:
   provider: "anthropic"  # "anthropic" or "openai"
@@ -217,21 +215,33 @@ checks:
     arguments:
       actual: "$.output.value.tool_predictions[0].tool_name"
       expected: "$.test_case.expected.tool_name"
+    metadata:
+      name: "Correct Tool"
+      description: "LLM selected the expected tool"
 
   # Verify old_str contains the typo
   - type: "contains"
     arguments:
       text: "$.output.value.tool_predictions[0].arguments.old_str"
       phrases: "$.test_case.expected.old_str_contains"
+    metadata:
+      name: "old_str Has Typo"
+      description: "The old_str argument contains the text to be replaced"
 
   # Verify new_str contains the fix
   - type: "contains"
     arguments:
       text: "$.output.value.tool_predictions[0].arguments.new_str"
       phrases: "$.test_case.expected.new_str_contains"
+    metadata:
+      name: "new_str Has Fix"
+      description: "The new_str argument contains the corrected text"
 
   # Verify final content contains the fix
   - type: "contains"
     arguments:
       text: "$.output.value.final_content"
       phrases: "$.test_case.expected.final_must_contain"
+    metadata:
+      name: "Content Fixed"
+      description: "Final content contains the expected correction"
