--- a/evals/prompt_mcp/config_edit_prompt_content.yaml
+++ b/evals/prompt_mcp/config_edit_prompt_content.yaml
@@ -1,6 +1,10 @@
-# Prompt MCP Server Evaluation Configuration
-# Tests the edit_prompt_content tool's ability to make targeted edits with argument changes
-#
+name: "edit_prompt_content: Targeted Template Edits"
+description: |
+  Tests the edit_prompt_content tool for targeted edits with argument coordination.
+  Given a prompt template and an instruction to make a targeted change (add/remove/rename
+  a variable, fix a typo), the LLM should use edit_prompt_content (not update_prompt) and
+  correctly coordinate the content edit with the arguments list.
+
 # TOOL CONTEXT:
 # edit_prompt_content: Edits template content using old_str/new_str replacement, optionally
 #   updating arguments atomically. old_str must match exactly one location. When the edit changes
@@ -8,11 +12,6 @@
 #   (full replacement). Omit arguments for text-only changes.
 # update_prompt: Updates metadata (title, description, tags, name) and/or fully replaces template
 #   content. Used for metadata changes or complete rewrites.
-#
-# WHAT THIS EVAL TESTS:
-# Given a prompt template and an instruction to make a targeted change (add/remove/rename a
-# variable, fix a typo), the LLM should use edit_prompt_content (not update_prompt) and
-# correctly coordinate the content edit with the arguments list.
 
 model:
   provider: "anthropic"  # "anthropic" or "openai"
@@ -184,12 +183,18 @@ checks:
     arguments:
       actual: "$.output.value.tool_predictions[0].tool_name"
       expected: "$.test_case.expected.tool_name"
+    metadata:
+      name: "Correct Tool"
+      description: "LLM selected edit_prompt_content (not update_prompt) for targeted edits"
 
   # Verify final content contains expected text
   - type: "contains"
     arguments:
       text: "$.output.value.final_content"
       phrases: "$.test_case.expected.final_must_contain"
+    metadata:
+      name: "Content Contains Expected"
+      description: "Final template contains the expected text/variables"
 
   # Verify final content does not contain forbidden text
   - type: "contains"
@@ -197,9 +202,15 @@ checks:
       text: "$.output.value.final_content"
       phrases: "$.test_case.expected.final_must_not_contain"
       negate: true
+    metadata:
+      name: "Removed Text Gone"
+      description: "Final template no longer contains removed/replaced text"
 
   # Verify argument names match expected (sorted lists for order-independent comparison)
   - type: "equals"
     arguments:
       actual: "$.output.value.argument_names"
       expected: "$.test_case.expected.expected_argument_names"
+    metadata:
+      name: "Arguments Correct"
+      description: "Argument definitions match expected (added/removed/renamed correctly)"
