--- a/backend/src/prompt_mcp_server/tools.yaml
+++ b/backend/src/prompt_mcp_server/tools.yaml
@@ -1,6 +1,6 @@
 get_context:
   description: |
-    Get a summary of the user's prompts. Use this at the START of a session to understand: what prompts the user has (counts), how prompts are organized (tags, filters in priority order), what's inside each filter (top prompts per filter), and what prompts the user frequently uses (recently used, created, modified). Results reflect a point-in-time snapshot. Call once at session start; re-calling is only useful if the user significantly creates, modifies, or reorganizes content during the session. Returns a markdown summary optimized for quick understanding. Use prompt names from the response with get_prompt_content for full templates. Use tag names with search_prompts to find related prompts.
+    Get a summary of the user's prompts: counts, tags, filters, and recent activity. Call once at session start. Use prompt names from the response with get_prompt_content for full templates.
   parameters:
     tag_limit: |
       Number of top tags
@@ -13,7 +13,7 @@ get_context:
 
 search_prompts:
   description: |
-    Search prompts with filters. Returns metadata including prompt_length and prompt_preview (first 500 chars) for size assessment before fetching the template. Use for discovery before get_prompt_content.
+    Search prompts with filters. Returns metadata including prompt_length and prompt_preview for size assessment before fetching the template.
   parameters:
     query: |
       Text to search in name, title, description, and content. Omit to list all prompts.
@@ -34,7 +34,7 @@ search_prompts:
 
 list_filters:
   description: |
-    List filters relevant to prompts. Filters are saved views with tag-based rules. Use filter IDs with search_prompts(filter_id=...) to search within a specific filter. Returns filter ID, name, content types, and the tag-based filter expression.
+    List saved filters with IDs, names, and tag-based rules. Use filter IDs with search_prompts(filter_id=...) to search within a specific filter.
 
 list_tags:
   description: |
@@ -42,10 +42,10 @@ list_tags:
 
 get_prompt_content:
   description: |
-    Get a prompt's Jinja2 template and arguments for viewing or editing. Returns the raw template text AND the argument definitions list. Supports partial reads via start_line/end_line for large templates; response includes content_metadata with total_lines and is_partial flag. Use get_prompt_metadata first to check prompt_length before loading large templates.
+    Get a prompt's Jinja2 template and argument definitions. Supports partial reads via start_line/end_line for large templates.
   parameters:
     name: |
-      The prompt name (e.g., 'code-review'). Use search_prompts if you need to discover prompt names.
+      The prompt name (e.g., 'code-review'). Use search_prompts to discover names.
     start_line: |
       Start line for partial read (1-indexed). Optional.
     end_line: |
@@ -53,46 +53,46 @@ get_prompt_content:
 
 get_prompt_metadata:
   description: |
-    Get a prompt's metadata without the template. Returns name, title, description, arguments, tags, prompt_length, and prompt_preview. Use to check size before fetching with get_prompt_content.
+    Get a prompt's metadata without the template content. Returns name, title, description, arguments, tags, prompt_length, and prompt_preview.
   parameters:
     name: |
-      The prompt name (e.g., 'code-review'). Use search_prompts if you need to discover prompt names.
+      The prompt name (e.g., 'code-review'). Use search_prompts to discover names.
 
 create_prompt:
   description: |
-    Create a new prompt template. Prompts are Jinja2 templates with defined arguments that can be used as reusable templates for AI interactions.
+    Create a new prompt template. Content uses Jinja2 syntax ({{ variable_name }} placeholders). Variables must be defined in the arguments list.
   parameters:
     name: |
-      Prompt identifier (lowercase with hyphens, e.g., 'code-review'). Must be unique for your account.
+      Prompt identifier (lowercase with hyphens, e.g., 'code-review'). Must be unique.
     title: |
-      Optional human-readable display name (e.g., 'Code Review Assistant')
+      Human-readable display name (e.g., 'Code Review Assistant')
     description: |
-      Optional description of what the prompt does
+      Description of what the prompt does
     content: |
-      The prompt template text (required field). Can be plain text or use Jinja2 syntax: {{ variable_name }} for placeholders, {% if var %}...{% endif %} for conditionals, {% for x in items %}...{% endfor %} for loops, {{ text|upper }} for filters. Variables must be defined in the arguments list. Undefined variables cause errors.
+      The prompt template text. Uses Jinja2 syntax: {{ variable_name }} for placeholders, {% if var %}...{% endif %} for conditionals, {% for x in items %}...{% endfor %} for loops. Variables must be defined in the arguments list.
     arguments: |
       List of argument definitions for the template
     arguments_items_name: |
-      Argument name (lowercase with underscores, e.g., 'code_to_review'). Must be a valid Python/Jinja2 identifier.
+      Argument name (lowercase with underscores, e.g., 'code_to_review')
     arguments_items_description: |
       Description of the argument
     arguments_items_required: |
-      Whether this argument is required (default: false, optional args default to empty string)
+      Whether this argument is required (default: false)
     tags: |
-      Optional tags for categorization (lowercase with hyphens)
+      Tags for categorization (lowercase with hyphens)
 
 edit_prompt_content:
   description: |
-    Edit template content using old_str/new_str replacement. When the edit adds, removes, or renames template variables ({{ var }}), you MUST pass the arguments parameter in this same tool call with ALL argument definitions - do NOT use a separate update_prompt call. old_str must match exactly one location. Omit arguments for text-only changes (existing arguments preserved automatically).
+    Edit part of a template using old_str/new_str replacement. Use when editing a specific section — from a single typo to an entire section. Do NOT use to rewrite or restructure the whole template — use update_prompt for that. old_str must match exactly one location. When adding, removing, or renaming template variables, include the arguments parameter with ALL argument definitions.
   parameters:
     name: |
-      The prompt name (e.g., 'code-review'). Use search_prompts if you need to discover prompt names.
+      The prompt name (e.g., 'code-review'). Use search_prompts to discover names.
     old_str: |
-      Exact text to find in the template. Must match exactly one location. If not found, returns no_match error (whitespace normalization is automatic). If multiple matches, returns multiple_matches error with line numbers and context to help construct a unique match.
+      Exact text to find in the template. Must match exactly one location.
     new_str: |
       Replacement text. Use empty string to delete the matched text.
     arguments: |
-      Only include when adding, removing, or renaming template variables. Do NOT include for simple text edits (typos, wording) - omitting preserves existing arguments automatically. If provided, this list FULLY REPLACES all current arguments (not a merge).
+      Only include when adding, removing, or renaming template variables. Omit for text-only changes. See server instructions for replacement semantics.
     arguments_items_name: |
       Argument name (lowercase with underscores)
     arguments_items_description: |
@@ -102,22 +102,22 @@ edit_prompt_content:
 
 update_prompt:
   description: |
-    Update metadata (title, description, tags, name) and/or fully replace template content. All parameters optional - only provide what you want to change. For targeted text or variable edits, use edit_prompt_content instead.
+    Rewrite, restructure, or fully replace a prompt's template content, and/or update metadata (title, description, tags, name). Use whenever the instruction asks to rewrite, rephrase, simplify, or restructure the whole template. Use edit_prompt_content when editing a specific section. All parameters optional — only provide what you want to change.
   parameters:
     name: |
-      Current prompt name (e.g., 'code-review'). Use search_prompts or get_context to discover prompt names.
+      Current prompt name (e.g., 'code-review'). Use search_prompts to discover names.
     new_name: |
-      New name for the prompt (optional). Must be unique and lowercase-with-hyphens.
+      New name for the prompt. Must be unique and lowercase-with-hyphens.
     title: |
-      New human-readable title (optional).
+      New human-readable title.
     description: |
-      New description (optional).
+      New description.
     tags: |
-      New tags list (optional). Replaces all existing tags. Use lowercase-with-hyphens format. If tags aren't changing, omit to preserve existing tags.
+      New tags list. Replaces all existing tags. Omit to preserve existing tags.
     content: |
-      New template content (FULL REPLACEMENT of entire template). Omit to leave unchanged. If your new content uses the SAME variables as before, do NOT provide the arguments parameter. Only provide arguments when variables are added, removed, or renamed.
+      New template content (full replacement of entire template). Omit to leave unchanged.
     arguments: |
-      New arguments list (FULL REPLACEMENT). Omit if template variables ({{ var }}) aren't changing - existing arguments are preserved automatically. Only provide when adding, removing, or renaming variables. If provided, must include ALL arguments (replaces entire list).
+      New arguments list. Only include when template variables are added, removed, or renamed. Omit to preserve existing arguments. See server instructions for replacement semantics.
     arguments_items_name: |
       Argument name (lowercase with underscores)
     arguments_items_description: |
@@ -125,4 +125,4 @@ update_prompt:
     arguments_items_required: |
       Whether this argument is required
     expected_updated_at: |
-      Optional optimistic locking. Only provide if you have the exact updated_at value from a previous response.
+      For optimistic locking. Only provide if you have the exact updated_at value from a previous response.
