--- a/evals/prompt_mcp/config_update_prompt.yaml
+++ b/evals/prompt_mcp/config_update_prompt.yaml
@@ -1,8 +1,12 @@
 name: "update_prompt: Full Replacement & Metadata"
 description: |
-  Tests the update_prompt tool for full content replacement scenarios.
-  The LLM should choose update_prompt (not edit_prompt_content) for substantial rewrites.
-  Verifies correct argument and tag handling: full replacement semantics, not merge.
+  Tests whether the LLM selects update_prompt (not edit_prompt_content) for whole-template rewrites, metadata changes, and tag updates, and correctly handles full replacement semantics for arguments and tags.
+
+  Both tools can modify content, so the LLM must distinguish:
+    - update_prompt for rewriting/restructuring the whole template or updating metadata
+    - edit_prompt_content for changing a specific part
+
+  Each test case pre-fetches get_prompt_content or get_prompt_metadata and includes the result in the LLM prompt alongside a rewrite or metadata instruction. This simulates an agent that has already retrieved the template and now needs to choose the right mutation tool.
 
 # TOOL CONTEXT:
 # update_prompt: Updates metadata (title, description, tags, name) and/or fully replaces template
@@ -63,7 +67,7 @@ test_cases:
       final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
       expected_argument_names: null  # LLM should NOT provide arguments
     metadata:
-      description: "Rewrite without changing variables - should NOT provide arguments"
+      description: "Rewrite template without changing variables; agent should omit arguments param"
 
   # Test 2: Rewrite content ADDING a new variable
   # LLM MUST provide arguments with BOTH existing and new variables
@@ -101,7 +105,7 @@ test_cases:
       final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
       expected_argument_names: ["data", "focus_area"]  # MUST provide ALL args
     metadata:
-      description: "Add variable - MUST provide arguments with ALL vars (data + focus_area)"
+      description: "Rewrite template while adding a new variable; agent must pass all arguments (existing + new)"
 
   # Test 3: Rewrite content REMOVING variables
   # LLM MUST provide arguments excluding removed variables
@@ -161,7 +165,7 @@ test_cases:
         - "{{ recipient_type }}"
       expected_argument_names: ["key_points", "subject"]  # Only remaining vars
     metadata:
-      description: "Remove variables - MUST provide arguments with only remaining vars"
+      description: "Rewrite template while removing variables; agent must pass only the remaining arguments"
 
   # Test 4: Complete template replacement with all new variables
   # Tests wholesale replacement - new content, new vars, everything different
@@ -230,7 +234,7 @@ test_cases:
         - "{{ context }}"
       expected_argument_names: ["input_text", "output_format"]  # All new args
     metadata:
-      description: "Complete replacement - MUST provide all new arguments"
+      description: "Replace entire template with completely new content and variables; agent must pass only the new arguments"
 
   # Test 5: Rename variables while rewriting
   # LLM must provide arguments with new variable names
@@ -275,7 +279,7 @@ test_cases:
         - "{{ lang }}"
       expected_argument_names: ["source_content", "target_language"]  # Renamed args
     metadata:
-      description: "Rename variables - MUST provide arguments with new names"
+      description: "Rewrite template while renaming variables; agent must pass arguments with the new names"
 
   # Test 6: Metadata-only update (no content change)
   # Tests that LLM uses update_prompt for metadata without changing content
@@ -320,7 +324,7 @@ test_cases:
       expected_argument_names: null  # LLM should NOT provide arguments
       expected_tags: ["code", "development", "review"]  # Instruction asks to add tags
     metadata:
-      description: "Metadata-only update - should NOT provide content or arguments"
+      description: "Update title and tags only; agent should omit content and arguments params"
 
   # Test 7: Add tag to prompt with existing tags
   # Tags are FULL REPLACEMENT - LLM must provide ALL tags (existing + new)
@@ -364,7 +368,7 @@ test_cases:
       expected_argument_names: null  # Variables don't change, should NOT provide arguments
       expected_tags: ["business", "documents", "writing"]  # ALL tags (existing + new)
     metadata:
-      description: "Add tag - tags are FULL REPLACEMENT, must provide ALL tags"
+      description: "Add a tag to existing tags; agent must pass all tags (full replacement, not merge)"
 
   # Test 8: Rewrite content when prompt has tags (but NOT updating tags)
   # LLM should NOT provide tags parameter - existing tags should be preserved
@@ -401,7 +405,7 @@ test_cases:
       expected_argument_names: null  # Variables don't change, should NOT provide arguments
       expected_tags: null  # Should NOT provide tags - existing tags preserved automatically
     metadata:
-      description: "Rewrite content with existing tags - should NOT provide tags parameter"
+      description: "Rewrite content without changing tags; agent should omit tags param to preserve them"
 
 checks:
   # Primary check: Verify correct tool was selected (update_prompt, NOT edit_prompt_content)
