Improve content MCP eval checks and tools
Align content MCP evals with prompt MCP patterns learned from earlier iterations.

Eval checks:
- Add "Typo Removed" (final_must_not_contain) and "Single Tool Call" checks to edit_content
- Add "Removed Text Gone" and "Single Tool Call" checks to update_item
- Add final_must_not_contain to all update_item test cases (placeholders where no specific exclusion needed)

Tool descriptions (content MCP tools.yaml):
- update_item: action verbs ("Rewrite, restructure, or fully replace") to guide tool selection
- tags parameter: explicit "FULL REPLACEMENT... include existing tags you want to keep"

Prompt formatting:
- edit_content: replace vague "Fix the issue found above" with explicit instruction naming the spelling error
- Both test files: consistent "Use the tool results above as context" preamble

--- a/evals/content_mcp/config_edit_content.yaml
+++ b/evals/content_mcp/config_edit_content.yaml
@@ -245,3 +245,22 @@ checks:
     metadata:
       name: "Content Fixed"
       description: "Final content contains the expected correction"
+
+  # Verify final content does not contain the typo
+  - type: "contains"
+    arguments:
+      text: "$.output.value.final_content"
+      phrases: "$.test_case.expected.final_must_not_contain"
+      negate: true
+    metadata:
+      name: "Typo Removed"
+      description: "Final content no longer contains the original typo"
+
+  # Single tool call check
+  - type: "equals"
+    arguments:
+      actual: "$.output.value.prediction_count"
+      expected: 1
+    metadata:
+      name: "Single Tool Call"
+      description: "Agent made exactly one tool call"
