--- a/evals/content_mcp/config_update_item.yaml
+++ b/evals/content_mcp/config_update_item.yaml
@@ -108,6 +108,7 @@ test_cases:
     expected:
       tool_name: "update_item"
       final_must_contain: ["|", "Method", "Endpoint", "GET", "POST", "DELETE"]
+      final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
     metadata:
       description: "Convert prose documentation into a structured table; agent must choose update_item over edit_content"
 
@@ -174,6 +175,7 @@ test_cases:
     expected:
       tool_name: "update_item"
       final_must_contain: ["Bug Fix", "Feature Request", "Dark mode"]
+      final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
     metadata:
       description: "Reorganize scattered notes into structured sections; agent must choose update_item over edit_content"
 
@@ -194,6 +196,7 @@ test_cases:
     expected:
       tool_name: "update_item"
       final_must_contain: ["Project Ideas", "CLI tool"]
+      final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
       expected_tags: ["backlog", "ideas", "projects"]
     metadata:
       description: "Add a tag to existing tags; agent must pass all tags (full replacement, not merge)"
@@ -214,6 +217,7 @@ test_cases:
     expected:
       tool_name: "update_item"
       final_must_contain: ["John", "Sarah"]
+      final_must_not_contain: "__PLACEHOLDER_NO_EXCLUSION__"
       expected_tags: null  # Should NOT provide tags - existing tags preserved
     metadata:
       description: "Rewrite content without changing tags; agent should omit tags param to preserve them"
@@ -237,6 +241,16 @@ checks:
       name: "Content Updated"
       description: "Final content contains the expected text after rewrite"
 
+  # Verify final content does not contain forbidden text
+  - type: "contains"
+    arguments:
+      text: "$.output.value.final_content"
+      phrases: "$.test_case.expected.final_must_not_contain"
+      negate: true
+    metadata:
+      name: "Removed Text Gone"
+      description: "Final content no longer contains removed/replaced text"
+
   # Verify tags behavior:
   # - If expected is null: LLM should NOT have provided tags
   # - If expected is a list: final tags should match
@@ -247,3 +261,12 @@ checks:
     metadata:
       name: "Tags Correct"
       description: "Tags handled correctly (preserved when unchanged, full replacement when updated)"
+
+  # Single tool call check
+  - type: "equals"
+    arguments:
+      actual: "$.output.value.prediction_count"
+      expected: 1
+    metadata:
+      name: "Single Tool Call"
+      description: "Agent made exactly one tool call"
