Add multi-model parametrize support to evals
Replace single `model:` config with `models:` list in edit_content eval YAML and use @pytest.mark.parametrize to run each model as a separate test variant. Model info (name, provider, temperature) is added to the output dict since @evaluate(metadata=...) is static and shared across parametrize variants.

- YAML: `model:` → `models:` list (claude-haiku-4-5 + gpt-4o-mini)
- Test: parametrize over MODELS, add model info to returned output dict
- Viewer server: backfill model info from first result's output into metadata when building list items
- Viewer types: make model_name/model_provider optional on RunMetadata for backwards compat
- Viewer components: handle optional model_name with fallback in RunsList and RunDetail

--- a/evals/content_mcp/config_edit_content.yaml
+++ b/evals/content_mcp/config_edit_content.yaml
@@ -10,10 +10,13 @@ description: |
 # update_item: Updates metadata and/or fully replaces content. Used for metadata changes or
 #   complete rewrites.
 
-model:
-  provider: "anthropic"  # "anthropic" or "openai"
-  name: "claude-haiku-4-5"
-  temperature: 0.3
+models:
+  - provider: "anthropic"
+    name: "claude-haiku-4-5"
+    temperature: 0.3
+  - provider: "openai"
+    name: "gpt-4o-mini"
+    temperature: 0.3
 
 eval:
   samples: 10
