Add multi-model evals and avg cost/time columns
Apply multi-model parametrize to remaining eval test files (update_item, edit_prompt_content, update_prompt) matching the pattern from edit_content.

Also replace the total "Cost" column in the runs list with "Avg Cost" and add an "Avg Time" column, computed server-side as per-sample averages.

- YAML configs: `model:` → `models:` list with haiku + gpt-4o-mini
- Test files: parametrize over MODELS, add model info to output dict
- Viewer server: compute avg_cost and avg_duration_seconds from results
- Viewer RunsList: show avg cost and avg duration instead of total cost

--- a/evals/content_mcp/config_update_item.yaml
+++ b/evals/content_mcp/config_update_item.yaml
@@ -14,10 +14,13 @@ description: |
 # - null: LLM should NOT provide tags parameter (tags preserved automatically)
 # - ["tag1", "tag2"]: Final tags should exactly match (LLM must provide ALL tags)
 
-model:
-  provider: "anthropic"  # "anthropic" or "openai"
-  name: "claude-haiku-4-5"
-  temperature: 0.3
+models:
+  - provider: "anthropic"
+    name: "claude-haiku-4-5"
+    temperature: 0.3
+  - provider: "openai"
+    name: "gpt-4o-mini"
+    temperature: 0.3
 
 eval:
   samples: 10
