Accept null for optional fields in Prompt MCP schemas
Some models (e.g., gpt-4o-mini) send explicit null for optional tool parameters. The JSON schemas rejected these at validation before handlers could run, since they declared `"type": "string"` rather than `["string", "null"]`.

Schema changes:
- Allow null for all optional string and array fields in search_prompts, create_prompt, edit_prompt_content, and update_prompt tool schemas
- Add null to enum constraints for tag_match, sort_by, and sort_order

Handler null filtering:
- Change `if "key" in arguments` to `if arguments.get("key") is not None` in _handle_search_prompts, _handle_create_prompt, and _handle_edit_prompt_content so null values are stripped from API payloads (update_prompt already handled this)

Other changes:
- Include updated_at in get_prompt_content and get_prompt_metadata responses
- Update tool description text in tools.yaml for argument replacement semantics
- Fix stale test assertions for updated instructions and tool descriptions
- Remove debug prints from eval test, bump flex-evals dependency

--- a/backend/src/prompt_mcp_server/tools.yaml
+++ b/backend/src/prompt_mcp_server/tools.yaml
@@ -98,7 +98,7 @@ edit_prompt_content:
     new_str: |
       Replacement text. Use empty string to delete the matched text.
     arguments: |
-      The complete list of ALL argument definitions that should exist after the edit. Only include when template variables ({{ var }}) are being added, removed, or renamed. Omit entirely for text-only changes (existing arguments preserved automatically). This list fully replaces the current arguments. Preserve existing argument descriptions exactly — only modify descriptions the user explicitly asks to change.
+      The complete list of ALL argument definitions that should exist after the edit (full replacement). **Omit when template variables are unchanged** — this avoids unnecessary writes, reduces latency and cost, and eliminates the risk of accidentally altering argument names or descriptions. Only provide when variables are added, removed, or renamed, and include ALL argument definitions (not just changed ones).
     arguments_items_name: |
       Argument name (lowercase with underscores)
     arguments_items_description: |
@@ -123,7 +123,7 @@ update_prompt:
     content: |
       New template content (full replacement of entire template). Omit to leave unchanged.
     arguments: |
-      New arguments list. Only include when template variables are added, removed, or renamed. Omit to preserve existing arguments. See server instructions for replacement semantics. Preserve existing argument descriptions exactly — only modify descriptions the user explicitly asks to change.
+      New arguments list (full replacement). **Omit when template variables are unchanged** — this avoids unnecessary writes, reduces latency and cost, and eliminates the risk of accidentally altering argument names or descriptions. Only provide when variables are added, removed, or renamed, and include ALL argument definitions (not just changed ones).
     arguments_items_name: |
       Argument name (lowercase with underscores)
     arguments_items_description: |
