Use flex-evals max_concurrency instead of manual semaphore
Replace the hand-rolled asyncio.Semaphore concurrency limiting with flex-evals' built-in `max_concurrency` parameter on the `@evaluate` decorator (added in flex-evals 0.3.27).

- Remove `MCP_CONCURRENCY_LIMIT`, `_semaphore_cache`, and `get_mcp_semaphore()` from `evals/utils.py`
- Remove semaphore wrapping from all 4 eval test files
- Add `max_concurrency: 20` to all 4 YAML eval configs
- Pass `max_concurrency` through `@evaluate` decorator in all test files
- Bump flex-evals minimum version to 0.3.27

The decorator's semaphore is acquired before the timer starts, so queuing time no longer inflates recorded `duration_seconds`.

--- a/evals/prompt_mcp/config_update_prompt.yaml
+++ b/evals/prompt_mcp/config_update_prompt.yaml
@@ -33,6 +33,7 @@ models:
 eval:
   samples: 10
   success_threshold: 0.6
+  max_concurrency: 20
 
 test_cases:
   # Test 1: Rewrite content WITHOUT changing variables
