--- a/evals/content_mcp/config_update_item.yaml
+++ b/evals/content_mcp/config_update_item.yaml
@@ -25,6 +25,7 @@ models:
 eval:
   samples: 10
   success_threshold: 0.6
+  max_concurrency: 20
 
 test_cases:
   # Test 1: Convert meeting notes to executive summary
