Improve update_item eval accuracy
- Make content `contains` checks case-insensitive to avoid false failures on casing differences (e.g. "Dark mode" vs "dark mode")
- Accept tags as correct when LLM sends back identical tags, even if unnecessary — only fail when tags are actually changed
- Strengthen `update_item` tool description for tags parameter to discourage sending tags when not changing them

--- a/backend/src/mcp_server/tools.yaml
+++ b/backend/src/mcp_server/tools.yaml
@@ -83,7 +83,7 @@ update_item:
     description: |
       New description. Omit to leave unchanged.
     tags: |
-      New tags list (FULL REPLACEMENT of all existing tags — include existing tags you want to keep). Omit to preserve existing tags.
+      New tags list (FULL REPLACEMENT of all existing tags — include existing tags you want to keep). Do NOT provide this parameter unless you are intentionally changing tags — omitting it preserves existing tags automatically.
     url: |
       New URL (bookmarks only). Omit to leave unchanged.
     content: |
